add douban and day060

--- a/demo/day100/day002.html
+++ b/demo/day100/day002.html
@@ -4,110 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Day 002 - 轮播图</title>
-    <style>
-        .slideshow{
-            position: relative;
-            width: 700px;
-            height: 400px;
-            outline: 1px solid gray;
-            overflow: hidden;
-        }
-        .wrap{
-            position: relative;
-            width: 7000px;
-            height: 400px;
-        }
-        img{
-            width: 700px;
-            height: 400px;
-            float: left;
-        }
-        .prenext > div{
-            position: relative;
-            float: left;
-            bottom: 250px;
-            width: 30px;
-            height: 60px;
-            background: gray;
-            text-align: center;
-            line-height: 60px;
-            cursor: pointer;
-            transition: 200ms;
-        }
-        .prenext > div:nth-of-type(2){
-            left: 640px;
-        }
-        .prenext > div:hover{
-            opacity: .5;
-            color: white;
-        }
-        .dot{
-            position: relative;
-            bottom: 30px;
-            margin-left: 10px;
-            width: 10px;
-            height: 10px;
-            border-radius: 50%;
-            background: white;
-            border: 1px solid black;
-            float: left;
-            cursor: pointer;
-            transition: 200ms;
-        }
-        .dot:hover{
-            border-color: white;
-            box-shadow: 0 0 5px 5px red;
-        }
-        .on{
-            border-color: white;
-            box-shadow: 0 0 5px 5px red;
-        }
-    </style>
+    <title>Day 002 - 原生JS实现轮播图</title>
 </head>
 <body>
-    <div class="slideshow">
-        <div class="wrap">
-            <img src="https://i.loli.net/2019/03/06/5c7f7fc9a4158.jpg" alt="">
-            <img src="https://i.loli.net/2019/03/06/5c7f7fc9d2c4d.jpg" alt="">
-            <img src="https://i.loli.net/2019/03/06/5c7f7fc9dbc71.jpg" alt="">
-            <img src="https://i.loli.net/2019/03/06/5c7f7fca186a5.jpg" alt="">
-            <img src="https://i.loli.net/2019/03/06/5c7f7fca1d937.jpg" alt="">
-            <img src="https://i.loli.net/2019/03/06/5c7f7fca21ad0.jpg" alt="">
-            <img src="https://i.loli.net/2019/03/06/5c7f7fca26652.jpg" alt="">
-            <img src="https://i.loli.net/2019/03/06/5c7f7fca299cc.jpg" alt="">
-            <img src="https://i.loli.net/2019/03/06/5c7f7fca2d9f7.jpg" alt="">
-            <img src="https://i.loli.net/2019/03/06/5c7f7fca31b7f.jpg" alt="">
-        </div>
-        <div class="prenext">
-            <div class="pre">&lt;</div>
-            <div class="next">&gt;</div>
-        </div>
-        <div class="dots">
-            <div class="dot on"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
-        </div>
-    </div>
-    <script>
-        let wrap = document.getElementsByClassName('warp')[0];
-        let pre = document.getElementsByClassName('pre')[0];
-        let next = document.getElementsByClassName('next')[0];
-
-        function preImg(offset){
-            wrap.style.left = offset + 'px';
-        }
-        function nextImg(){}
-
-        pre.addEventListener('click', preImg(-800), false);
-        next.addEventListener('click', function(){}, false);
-    </script>
+    
 </body>
 </html>
