--- a/demo/day100/day055.html
+++ b/demo/day100/day055.html
@@ -4,9 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Day 055 - 输入框的历史记录</title>
+  <title>Day 055 - 锤子科技首页 banner3D效果</title>
 </head>
 <body>
-  
+  <div>
+    <section id="cover">
+
+    </section>
+  </div>
 </body>
 </html>
